--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "gen": "tree-sitter generate",
-    "install": "if [ ! -d ./src ]; then tree-sitter generate; fi && node-gyp configure build",
+    "install": "node bin/install.js",
+    "prepare": "node bin/install.js",
     "test": "tree-sitter test"
   },
   "repository": {
@@ -29,9 +30,9 @@
     "verilog"
   ],
   "dependencies": {
-    "nan": "^2.12.1"
+    "nan": "^2.14.0"
   },
   "devDependencies": {
-    "tree-sitter-cli": "^0.15.3"
+    "tree-sitter-cli": "^0.15.7"
   }
 }
