--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,21 @@
-os: linux
-dist: trusty
-sudo: required
 language: node_js
 node_js:
-  - "12"
   - "11"
   - "10"
   - "9"
   - "8"
-env:
-  - CXX=g++-7
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - g++-7
+  - "7"
+  - "6"
+os:
+  - linux
+  - osx
+#  - windows
+sudo: false
 install:
   - g++ --version
   - npm --version
-  - time npm install
+  - npm install
   - wc -l src/parser.c
   - wc -c build/Release/*.node
-script: npm test
+script:
+  - npm test
