--- a/package.json
+++ b/package.json
@@ -33,6 +33,17 @@
     "nan": "^2.14.0"
   },
   "devDependencies": {
+    "@drom/eslint-config": "^0.10.0",
+    "eslint": "^5.16.0",
     "tree-sitter-cli": "^0.15.7"
+  },
+  "eslintConfig": {
+    "extends": "@drom/eslint-config/eslint4/node4",
+    "rules": {
+      "indent": [
+        1,
+        2
+      ]
+    }
   }
 }
