--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
   },
   "devDependencies": {
     "@drom/eslint-config": "^0.10.0",
-    "tree-sitter-cli": "^0.19.3",
-    "eslint": "^7.21.0"
+    "eslint": "^7.22.0",
+    "tree-sitter-cli": "^0.18.3"
   },
   "eslintConfig": {
     "extends": "@drom/eslint-config/eslint4/node8"
