--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@drom/eslint-config": "^0.12.0",
     "eslint": "^8.56.0",
+    "node-addon-api": "^8.0.0",
     "tree-sitter-cli": "^0.22.6"
   },
   "eslintConfig": {
